--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <h1 class="text-center mb-4">PLATEAU AWARD 2024出展作品　PLATEAU Urban Equalizer</h1>
-<p class="text-center"><img src="https://creativival.gitub.io/plateau-urban-equalizer/thumbnail.png" alt="thumbnail" /></p>
+<p class="text-center"><img src="https://creativival.github.io/plateau-urban-equalizer/images/thumbnail.png" alt="thumbnail" /></p>
 <p>このアプリは、PLATEAUプロジェクトの3D都市データを活用し、音楽に連動したサウンドエコライザー効果をビジュアル化するアプリケーションです。視覚と聴覚を融合した新しい都市体験を提供します。特にプログラミング初心者向けに詳細なコード解説を行い、自分で作成できるようにサポートしています。</p>
 <h2>コード解説</h2>
 <ul>
@@ -49,8 +49,8 @@
 </ul>
 <h2>デモ画像</h2>
 <p>以下は、アプリの実行中の画面です。</p>
-<p class="text-center"><img src="https://creativival.gitub.io/plateau-urban-equalizer/demo1.png" alt="デモ画像1" />
-<img src="https://creativival.gitub.io/plateau-urban-equalizer/demo2.png" alt="デモ画像2" /></p>
+<p class="text-center"><img src="https://creativival.github.io/plateau-urban-equalizer/images/demo1.png" alt="デモ画像1" />
+<img src="https://creativival.github.io/plateau-urban-equalizer/images/demo2.png" alt="デモ画像2" /></p>
 <h2>必要な環境</h2>
 <ul>
   <li>Python 3.10以上</li>
@@ -75,8 +75,8 @@
   </li>
   <li>
     <p>リポジトリをクローンまたはダウンロードします。</p>
-    <pre><code class="bash">git clone https://github.com/your-repo/3d-sound-equalizer-app.git
-cd 3d-sound-equalizer-app
+    <pre><code class="bash">git clone https://github.com/your-repo/plateau-urban-equalizer.git
+cd plateau-urban-equalizer
 </code></pre>
   </li>
   <li>
@@ -122,7 +122,7 @@ cd 3d-sound-equalizer-app
     </ul>
   </li>
 </ul>
-<h2>プロジェクト構成plaintext</h2>
+<h2>プロジェクト構成</h2>
 <pre><code class="plaintext">plateau-urban-equalizer/
 ├── 14/                      # PLATEAUプロジェクトの都市データ
 ├── 15/                      # PLATEAUプロジェクトの都市データ
@@ -149,7 +149,7 @@ cd 3d-sound-equalizer-app
 <ul>
   <li>
     <p><strong>カスタマイズ</strong><br />
-    main.py内のタイル座標を変更することで、異なる都市エリアを表示できます。</p>
+    main.py内のタイル座標を変更することで、異なる都市エリアを表示できます。ズームレベルに対応するタイル座標の調べ方は、上記の解説記事の付録を参照してください。</p>
   </li>
   <li>
     <p><strong>波形のパラメータ調整</strong><br />
@@ -157,7 +157,7 @@ cd 3d-sound-equalizer-app
   </li>
   <li>
     <p><strong>初心者サポート</strong><br />
-    各クラスや関数に詳細なコメントが付いており、プログラムの仕組みを学ぶ教材としても活用できます。</p>
+    各クラスや関数に詳細なコメントが付いており、プログラムの仕組みを学ぶ教材としても活用できます。特に、建築科の学生など、都市データを活用したプロジェクトに興味を持つ方におすすめです。</p>
   </li>
 </ul>
 <h2>ライセンス</h2>
@@ -167,6 +167,12 @@ cd 3d-sound-equalizer-app
   <li>このアプリを通じてPLATEAUプロジェクトに興味を持ち、都市データを活用したプロジェクトに挑戦していただければ幸いです。</li>
   <li>フィードバックや提案はぜひお寄せください。</li>
 </ul>
+
+
+
+
+
+
 
 
     </div>
