GitHub Pages index.htmlの更新

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <div class="container py-5">
 
 
+
+
 <h1 class="text-center mb-4">PLATEAU AWARD 2024出展作品　PLATEAU Urban Equalizer</h1>
 <p class="text-center"><img src="https://creativival.github.io/plateau-urban-equalizer/images/thumbnail.png" alt="thumbnail" /></p>
 <p>このアプリは、PLATEAUプロジェクトの3D都市データを活用し、音楽に連動したサウンドエコライザー効果をビジュアル化するアプリケーションです。視覚と聴覚を融合した新しい都市体験を提供します。特にプログラミング初心者向けに詳細なコード解説を行い、自分で作成できるようにサポートしています。</p>
@@ -160,6 +162,39 @@ cd plateau-urban-equalizer
     各クラスや関数に詳細なコメントが付いており、プログラムの仕組みを学ぶ教材としても活用できます。特に、建築科の学生など、都市データを活用したプロジェクトに興味を持つ方におすすめです。</p>
   </li>
 </ul>
+<h2>トラブルシューティング</h2>
+<p>各種トラブルシューティングをまとめます。</p>
+<h3>サウンド関係</h3>
+<p>音楽が再生できない原因として、次のようなものがあります。</p>
+<ul>
+  <li>
+    <p><strong>サウンドパスが正しくない</strong><br />
+    サウンドパスを修正</p>
+  </li>
+  <li>
+    <p><strong>MP３ファイルが壊れている</strong><br />
+    別のMP3ファイルに入れ替える</p>
+  </li>
+  <li>
+    <p><strong>ffmpegがインストールされていない</strong><br />
+    以下のコマンドでインストール可能です。
+    macOS: brew install ffmpeg
+    Ubuntu: sudo apt install ffmpeg
+    Windows: 公式サイトからダウンロードしてPATHを設定。</p>
+  </li>
+</ul>
+<h3>画像関係</h3>
+<p>画像が表示できない原因として、次のようなものがあります。</p>
+<ul>
+  <li>
+    <p><strong>画像パスが正しくない</strong><br />
+    画像パスを修正</p>
+  </li>
+  <li>
+    <p><strong>画像ファイルが壊れている</strong><br />
+    別の画像ファイルに入れ替える</p>
+  </li>
+</ul>
 <h2>ライセンス</h2>
 <p>このプロジェクトはMITライセンスの下で公開されています。詳細は<a href="LICENSE">LICENSEファイル</a>をご確認ください。</p>
 <h2>貢献</h2>
@@ -167,8 +202,6 @@ cd plateau-urban-equalizer
   <li>このアプリを通じてPLATEAUプロジェクトに興味を持ち、都市データを活用したプロジェクトに挑戦していただければ幸いです。</li>
   <li>フィードバックや提案はぜひお寄せください。</li>
 </ul>
-
-
 
 
 
