READMEの更新　応用事例の追加

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 
 
 
-
 <h1 class="text-center mb-4">PLATEAU AWARD 2024出展作品　PLATEAU Urban Equalizer</h1>
 <p class="text-center"><img src="https://creativival.github.io/plateau-urban-equalizer/images/thumbnail.png" alt="thumbnail" /></p>
 <p>このアプリは、PLATEAUプロジェクトの3D都市データを活用し、音楽に連動したサウンドエコライザー効果をビジュアル化するアプリケーションです。視覚と聴覚を融合した新しい都市体験を提供します。特にプログラミング初心者向けに詳細なコード解説を行い、自分で作成できるようにサポートしています。</p>
@@ -234,6 +233,7 @@ cd plateau-urban-equalizer
 │   ├── data_loader.py       # データの読み込み
 │   ├── equalizer.py         # サウンドエコライザー機能
 │   ├── sound.py             # 音楽解析と再生
+│   ├── piano.py             # ピアノ機能（第6章　応用事例）
 ├── images/
 │   └── mirror_ball.png      # 背景画像
 ├── sound/
@@ -242,6 +242,7 @@ cd plateau-urban-equalizer
 ├── building_app_example.py  # ビルの描画（第3章）
 ├── main_part4.py            # アプリのエントリーポイント（第4章）
 ├── main.py                  # アプリのエントリーポイント（完成）
+├── main_piano.py            # PLATEAU Piano（第6章　応用事例）
 ├── README.md                # 本ファイル
 ├── LICENSE                  # ライセンス
 </code></pre>
@@ -295,6 +296,12 @@ cd plateau-urban-equalizer
     別の画像ファイルに入れ替える</p>
   </li>
 </ul>
+<h3>応用事例</h3>
+<p>本アプリケーションの柔軟性を示すため、応用事例として PLATEAU Piano を作成しました。PLATEAU Piano は、3D都市をピアノの鍵盤に見立て、音楽を演奏できるアプリケーションです。</p>
+<p>詳しい作成手順やコードの詳細は、以下のリンクからご覧いただけます。この事例を参考に、ぜひ自分だけのオリジナルアプリケーションを作り上げてください！</p>
+<ul>
+  <li><a href="https://note.com/creativival/n/nf040a73a152a#83633652-8e44-4aab-8aaf-7e7b5f3db92a">PLATEAU Piano</a></li>
+</ul>
 <h2>ライセンス</h2>
 <p>このプロジェクトはMITライセンスの下で公開されています。詳細は<a href="LICENSE">LICENSEファイル</a>をご確認ください。</p>
 <h2>貢献</h2>
@@ -302,6 +309,9 @@ cd plateau-urban-equalizer
   <li>このアプリを通じてPLATEAUプロジェクトに興味を持ち、都市データを活用したプロジェクトに挑戦していただければ幸いです。</li>
   <li>フィードバックや提案はぜひお寄せください。</li>
 </ul>
+
+
+
 
 
 
