READMEの更新　応用事例の追加

--- a/index.html
+++ b/index.html
@@ -27,203 +27,202 @@
 <div class="container py-5">
 
 
-    <h1 class="text-center mb-4">PLATEAU AWARD 2024出展作品　PLATEAU Urban Equalizer</h1>
-    <p class="text-center"><img src="https://creativival.github.io/plateau-urban-equalizer/images/thumbnail.png"
-                                alt="thumbnail"/></p>
-    <p>
-        このアプリは、PLATEAUプロジェクトの3D都市データを活用し、音楽に連動したサウンドエコライザー効果をビジュアル化するアプリケーションです。視覚と聴覚を融合した新しい都市体験を提供します。特にプログラミング初心者向けに詳細なコード解説を行い、自分で作成できるようにサポートしています。</p>
-    <h2>コード解説</h2>
+
+
+
+
+
+
+
+
+<h1 class="text-center mb-4">PLATEAU AWARD 2024出展作品　PLATEAU Urban Equalizer</h1>
+<p class="text-center"><img src="https://creativival.github.io/plateau-urban-equalizer/images/thumbnail.png" alt="thumbnail" /></p>
+<p>このアプリは、PLATEAUプロジェクトの3D都市データを活用し、音楽に連動したサウンドエコライザー効果をビジュアル化するアプリケーションです。視覚と聴覚を融合した新しい都市体験を提供します。特にプログラミング初心者向けに詳細なコード解説を行い、自分で作成できるようにサポートしています。</p>
+<h2>コード解説</h2>
+<ul>
+  <li>
+    <p>このアプリの詳細なコード解説を無料で提供しています。解説記事はプログラミング初心者向けに、プログラムの仕組みや作成手順をわかりやすく解説しています。</p>
+  </li>
+  <li>
+    <p>解説記事を参考に、プログラムの仕組みを理解し、自分でカスタマイズしたり、新しいプロジェクトに応用することができます。</p>
+  </li>
+  <li>
+    <p>以下のリンクから閲覧できます。</p>
     <ul>
-        <li>
-            <p>このアプリの詳細なコード解説を無料で提供しています。解説記事はプログラミング初心者向けに、プログラムの仕組みや作成手順をわかりやすく解説しています。</p>
-        </li>
-        <li>
-            <p>解説記事を参考に、プログラムの仕組みを理解し、自分でカスタマイズしたり、新しいプロジェクトに応用することができます。</p>
-        </li>
-        <li>
-            <p>以下のリンクから閲覧できます。</p>
-            <ul>
-                <li><a href="https://note.com/creativival/n/nf040a73a152a">note: PLATEAU Urban Equalizer 解説記事</a></li>
-            </ul>
-        </li>
+      <li><a href="https://note.com/creativival/n/nf040a73a152a">note: PLATEAU Urban Equalizer 解説記事</a></li>
     </ul>
-    <h2>主な機能</h2>
-    <ul>
-        <li>
-            <p><strong>3D都市の構築</strong><br/>
-                PLATEAUプロジェクトが提供する地理データを元に3D都市を構築します。</p>
-        </li>
-        <li>
-            <p><strong>音楽のリアルタイム解析</strong><br/>
-                音楽の振幅をリアルタイムで解析し、そのデータを元に都市エフェクトを生成します。</p>
-        </li>
-        <li>
-            <p><strong>サウンドエコライザー機能</strong><br/>
-                音楽に連動してビルが上下に動き、波形の進行方向を切り替えることができます。</p>
-        </li>
-        <li>
-            <p><strong>カメラ操作</strong><br/>
-                外部視点や内部視点を切り替え、自由に都市を探索できます。</p>
-        </li>
-    </ul>
-    <h2>利用シーン</h2>
-    <p>『PLATEAU Urban Equalizer』は、3D都市データと音楽解析技術を活用した多機能なアプリケーションです。その応用範囲は幅広く、以下のような利用シーンが想定されています：</p>
-    <h3>1. イベントや映像制作</h3>
-    <ul>
-        <li><strong>まちづくりイベントでの上映</strong><br/>
-            音楽と連動した動きで、観客を魅了する都市エフェクトを提供します。
-        </li>
-        <li><strong>ミュージックビデオやプロモーション映像の背景</strong><br/>
-            ビル群が音楽に合わせて踊るビジュアルは、映像作品に動的な魅力をプラスします。
-        </li>
-    </ul>
-    <h3>2. 教育と学習</h3>
-    <ul>
-        <li><strong>工学部や情報系学生向けのプログラミング教材</strong><br/>
-            3Dレンダリングや音楽解析を通じて、実践的なプログラミングスキルを学ぶことができます。
-        </li>
-        <li><strong>初心者向けの学習サポート</strong><br/>
-            詳細なコード解説により、プログラミング初心者でも気軽に学べます。
-        </li>
-    </ul>
-    <h3>3. アプリケーション開発のベース</h3>
-    <ul>
-        <li><strong>3D都市アプリケーションのベースとして</strong><br/>
-            エコライザー機能を分離して、ゲーム、エンターテーメント、観光イベント、都市シミュレーション、研究用途などに応用可能です。
-        </li>
-        <li><strong>インタラクティブな都市体験アプリの構築</strong><br/>
-            カスタマイズ可能なコードを活用し、新しい都市体験アプリケーションを開発できます。
-        </li>
-    </ul>
-    <h2>カスタマイズ</h2>
-    <p>『PLATEAU Urban Equalizer』は用途に応じて柔軟なカスタマイズが可能で、ユーザーの目的や好みに応じて設定を変更できます。以下は、主要なカスタマイズ項目の例です。</p>
-    <h3>1. 基本設定</h3>
-    <p>アプリの基本設定は、以下のように調整できます（main.py）：</p>
-    <pre><code class="python"># アプリの基本設定
+  </li>
+</ul>
+<h2>主な機能</h2>
+<ul>
+  <li>
+    <p><strong>3D都市の構築</strong><br />
+    PLATEAUプロジェクトが提供する地理データを元に3D都市を構築します。</p>
+  </li>
+  <li>
+    <p><strong>音楽のリアルタイム解析</strong><br />
+    音楽の振幅をリアルタイムで解析し、そのデータを元に都市エフェクトを生成します。</p>
+  </li>
+  <li>
+    <p><strong>サウンドエコライザー機能</strong><br />
+    音楽に連動してビルが上下に動き、波形の進行方向を切り替えることができます。</p>
+  </li>
+  <li>
+    <p><strong>カメラ操作</strong><br />
+    外部視点や内部視点を切り替え、自由に都市を探索できます。</p>
+  </li>
+</ul>
+<h2>利用シーン</h2>
+<p>『PLATEAU Urban Equalizer』は、3D都市データと音楽解析技術を活用した多機能なアプリケーションです。その応用範囲は幅広く、以下のような利用シーンが想定されています：</p>
+<h3>1. イベントや映像制作</h3>
+<ul>
+  <li><strong>まちづくりイベントでの上映</strong><br />
+    音楽と連動した動きで、観客を魅了する都市エフェクトを提供します。</li>
+  <li><strong>ミュージックビデオやプロモーション映像の背景</strong><br />
+    ビル群が音楽に合わせて踊るビジュアルは、映像作品に動的な魅力をプラスします。</li>
+</ul>
+<h3>2. 教育と学習</h3>
+<ul>
+  <li><strong>工学部や情報系学生向けのプログラミング教材</strong><br />
+    3Dレンダリングや音楽解析を通じて、実践的なプログラミングスキルを学ぶことができます。</li>
+  <li><strong>初心者向けの学習サポート</strong><br />
+    詳細なコード解説により、プログラミング初心者でも気軽に学べます。</li>
+</ul>
+<h3>3. アプリケーション開発のベース</h3>
+<ul>
+  <li><strong>3D都市アプリケーションのベースとして</strong><br />
+    エコライザー機能を分離して、ゲーム、エンターテーメント、観光イベント、都市シミュレーション、研究用途などに応用可能です。</li>
+  <li><strong>インタラクティブな都市体験アプリの構築</strong><br />
+    カスタマイズ可能なコードを活用し、新しい都市体験アプリケーションを開発できます。</li>
+</ul>
+<h2>カスタマイズ</h2>
+<p>『PLATEAU Urban Equalizer』は用途に応じて柔軟なカスタマイズが可能で、ユーザーの目的や好みに応じて設定を変更できます。以下は、主要なカスタマイズ項目の例です。</p>
+<h3>1. 基本設定</h3>
+<p>アプリの基本設定は、以下のように調整できます（main.py）：</p>
+<pre><code class="python"># アプリの基本設定
 use_wireframe = False  # ワイヤーフレーム表示の有無（Trueにすると建物が線で描画されます）
 use_simplified_coords = True  # 簡略化された座標を使用するかどうか（計算負荷軽減）
 image_path = 'images/mirror_ball.png'  # 背景画像のパス
 sound_path = 'sound/Dive_To_Mod.mp3'  # 再生する音楽ファイルのパス
 </code></pre>
-    <ul>
-        <li>use_wireframe: ワイヤーフレーム表示を有効にすると、3D都市が構造として表示されます。デバッグや建物の構造確認に便利です。</li>
-        <li>use_simplified_coords: 計算負荷を軽減するため、建物データの座標を簡略化します。高性能PCで精密なモデルを表示したい場合はFalseに設定します。</li>
-        <li>image_path: 背景画像を変更することで、アプリの雰囲気を簡単に変えることができます。</li>
-        <li>sound_path: 好きな音楽ファイルを指定することで、異なる楽曲に合わせたエフェクトを楽しめます。</li>
-    </ul>
-    <h3>2. 簡略化の度合い</h3>
-    <p>建物データの頂点数を調整して、パフォーマンスを最適化できます（building.py）：</p>
-    <pre><code class="python"># 簡略化の度合いを設定（値が大きいほど頂点数が減少）
+<ul>
+  <li>use_wireframe: ワイヤーフレーム表示を有効にすると、3D都市が構造として表示されます。デバッグや建物の構造確認に便利です。</li>
+  <li>use_simplified_coords: 計算負荷を軽減するため、建物データの座標を簡略化します。高性能PCで精密なモデルを表示したい場合はFalseに設定します。</li>
+  <li>image_path: 背景画像を変更することで、アプリの雰囲気を簡単に変えることができます。</li>
+  <li>sound_path: 好きな音楽ファイルを指定することで、異なる楽曲に合わせたエフェクトを楽しめます。</li>
+</ul>
+<h3>2. 簡略化の度合い</h3>
+<p>建物データの頂点数を調整して、パフォーマンスを最適化できます（building.py）：</p>
+<pre><code class="python"># 簡略化の度合いを設定（値が大きいほど頂点数が減少）
 simplification_tolerance = 30  # 必要に応じて調整
 </code></pre>
-    <ul>
-        <li>simplification_tolerance: 値を大きくすると建物の形状が単純化され、計算負荷が軽減されます。ただし、形状が簡略化されすぎる場合があるため、適切な値を見つけることが重要です。</li>
-    </ul>
-    <h3>3. 波形エフェクトの調整</h3>
-    <p>波の動きを調整するパラメータを変更できます（equalizer.py）：</p>
-    <pre><code>wave_length = 500  # 波の長さ（値を大きくすると波が広がります）
+<ul>
+  <li>simplification_tolerance: 値を大きくすると建物の形状が単純化され、計算負荷が軽減されます。ただし、形状が簡略化されすぎる場合があるため、適切な値を見つけることが重要です。</li>
+</ul>
+<h3>3. 波形エフェクトの調整</h3>
+<p>波の動きを調整するパラメータを変更できます（equalizer.py）：</p>
+<pre><code>wave_length = 500  # 波の長さ（値を大きくすると波が広がります）
 wave_speed = 2  # 波の速度（波の進行速度を調整）
 wave_height_scale = 1000  # 波の高さ（値を増やすとビルの上下動が大きくなります）
 </code></pre>
-    <ul>
-        <li>wave_length: 波の長さを調整することで、都市全体の波動効果を変更できます。</li>
-        <li>wave_speed: 波が進む速度を調整できます。</li>
-        <li>wave_height_scale: ビルの動きの強さを制御します。</li>
-    </ul>
-    <h3>4. カメラ設定</h3>
-    <p>カメラ操作の初期設定を変更可能です（camera.py）。</p>
-    <pre><code># 外部カメラの初期位置
+<ul>
+  <li>wave_length: 波の長さを調整することで、都市全体の波動効果を変更できます。</li>
+  <li>wave_speed: 波が進む速度を調整できます。</li>
+  <li>wave_height_scale: ビルの動きの強さを制御します。</li>
+</ul>
+<h3>4. カメラ設定</h3>
+<p>カメラ操作の初期設定を変更可能です（camera.py）。</p>
+<pre><code># 外部カメラの初期位置
 self.camera.setPos(2048, -5000, 2048)  # 上空からの俯瞰視点
 self.camera.lookAt(0, 0, 0)  # 注視点を都市の中心に設定
 </code></pre>
+<ul>
+  <li>初期位置や注視点を変更して、アプリ起動時のカメラ視点をカスタマイズできます。</li>
+</ul>
+<h3>5. カスタマイズのメリット</h3>
+<ul>
+  <li>好みの音楽や画像を使って個性的な都市エフェクトを演出できます。</li>
+  <li>波形エフェクトや簡略化パラメータを調整して、パフォーマンスとビジュアルを両立できます。</li>
+  <li>初心者でも各設定を変更するだけで、アプリケーションの挙動を簡単にカスタマイズ可能です。</li>
+</ul>
+<p>ぜひこれらの設定を変更し、自分だけのオリジナル3D都市アプリケーションを作成してください！</p>
+<h2>デモ画像</h2>
+<p>以下は、アプリの実行中の画面です。</p>
+<p class="text-center"><img src="https://creativival.github.io/plateau-urban-equalizer/images/demo1.png" alt="デモ画像1" />
+<img src="https://creativival.github.io/plateau-urban-equalizer/images/demo2.png" alt="デモ画像2" /></p>
+<h2>必要な環境</h2>
+<ul>
+  <li>Python 3.10以上</li>
+  <li>必要ライブラリ：
     <ul>
-        <li>初期位置や注視点を変更して、アプリ起動時のカメラ視点をカスタマイズできます。</li>
+      <li><code>panda3d</code></li>
+      <li><code>pydub</code></li>
+      <li><code>sounddevice</code></li>
+      <li><code>numpy</code></li>
+      <li><code>Pillow</code></li>
+      <li><code>shapely</code></li>
+      <li><code>mapbox_vector_tile</code></li>
     </ul>
-    <h3>5. カスタマイズのメリット</h3>
-    <ul>
-        <li>好みの音楽や画像を使って個性的な都市エフェクトを演出できます。</li>
-        <li>波形エフェクトや簡略化パラメータを調整して、パフォーマンスとビジュアルを両立できます。</li>
-        <li>初心者でも各設定を変更するだけで、アプリケーションの挙動を簡単にカスタマイズ可能です。</li>
-    </ul>
-    <p>ぜひこれらの設定を変更し、自分だけのオリジナル3D都市アプリケーションを作成してください！</p>
-    <h2>デモ画像</h2>
-    <p>以下は、アプリの実行中の画面です。</p>
-    <p class="text-center"><img src="https://creativival.github.io/plateau-urban-equalizer/images/demo1.png"
-                                alt="デモ画像1"/>
-        <img src="https://creativival.github.io/plateau-urban-equalizer/images/demo2.png" alt="デモ画像2"/></p>
-    <h2>必要な環境</h2>
-    <ul>
-        <li>Python 3.10以上</li>
-        <li>必要ライブラリ：
-            <ul>
-                <li><code>panda3d</code></li>
-                <li><code>pydub</code></li>
-                <li><code>sounddevice</code></li>
-                <li><code>numpy</code></li>
-                <li><code>Pillow</code></li>
-                <li><code>shapely</code></li>
-                <li><code>mapbox_vector_tile</code></li>
-            </ul>
-        </li>
-    </ul>
-    <h2>インストール方法</h2>
-    <ol>
-        <li>
-            <p>必要なライブラリをインストールします。</p>
-            <pre><code class="bash">pip install panda3d pydub sounddevice numpy Pillow shapely mapbox-vector-tile
+  </li>
+</ul>
+<h2>インストール方法</h2>
+<ol>
+  <li>
+    <p>必要なライブラリをインストールします。</p>
+    <pre><code class="bash">pip install panda3d pydub sounddevice numpy Pillow shapely mapbox-vector-tile
 </code></pre>
-        </li>
-        <li>
-            <p>リポジトリをクローンまたはダウンロードします。</p>
-            <pre><code class="bash">git clone https://github.com/your-repo/plateau-urban-equalizer.git
+  </li>
+  <li>
+    <p>リポジトリをクローンまたはダウンロードします。</p>
+    <pre><code class="bash">git clone https://github.com/your-repo/plateau-urban-equalizer.git
 cd plateau-urban-equalizer
 </code></pre>
-        </li>
-        <li>
-            <p>PLATEAUプロジェクトの都市データをダウンロードします。このアプリでは処理を簡略化するために、plateau-lod2-mvtのデータセットを使用します。</p>
-            <ul>
-                <li><a href="https://github.com/indigo-lab/plateau-lod2-mvt">plateau-lod2-mvt GitHubレポジトリ</a></li>
-                <li>plateau-lod2-mvtは、CC-BY-4.0ライセンスで提供されています。</li>
-                <li><a href="https://creativecommons.org/licenses/by/4.0/deed.ja">CC BY 4.0</a></li>
-                <li>ダウンロードしたデータを14/、15/、16/のフォルダに配置します。</li>
-            </ul>
-        </li>
-        <li>
-            <p>必要なデータ（背景画像、音楽ファイル）を適切なフォルダに配置します。</p>
-            <ul>
-                <li>images/mirror_ball.png（背景画像はプロジェクトに収蔵）</li>
-                <li>sound/Dive_To_Mod.mp3（音楽ファイルはダウンロードして下さい。）</li>
-                <li><a href="https://dova-s.jp/bgm/play21452.html">Dive To Mod</a></li>
-                <li>フリーBGM素材「Dive To Mod」by MFP【Marron Fields Production】</li>
-            </ul>
-        </li>
-        <li>
-            <p>アプリを起動します。</p>
-            <pre><code class="bash">python main.py
-</code></pre>
-        </li>
-    </ol>
-    <h2>操作方法</h2>
+  </li>
+  <li>
+    <p>PLATEAUプロジェクトの都市データをダウンロードします。このアプリでは処理を簡略化するために、plateau-lod2-mvtのデータセットを使用します。</p>
     <ul>
-        <li>
-            <p>カメラ操作</p>
-            <ul>
-                <li>W / S / A / Dキー: カメラの前後左右移動</li>
-                <li>Q / Eキー: 上下移動</li>
-                <li>マウス: カメラの視点を回転</li>
-            </ul>
-        </li>
-        <li>
-            <p>アプリの操作</p>
-            <ul>
-                <li>Spaceキー: 音楽再生＆エコライザー起動</li>
-                <li>Zキー: 波の進行方向を切り替え</li>
-                <li>Escapeキー: アプリ終了</li>
-            </ul>
-        </li>
+      <li><a href="https://github.com/indigo-lab/plateau-lod2-mvt">plateau-lod2-mvt GitHubレポジトリ</a></li>
+      <li>plateau-lod2-mvtは、CC-BY-4.0ライセンスで提供されています。</li>
+      <li><a href="https://creativecommons.org/licenses/by/4.0/deed.ja">CC BY 4.0</a></li>
+      <li>ダウンロードしたデータを14/、15/、16/のフォルダに配置します。</li>
     </ul>
-    <h2>プロジェクト構成</h2>
-    <pre><code class="plaintext">plateau-urban-equalizer/
+  </li>
+  <li>
+    <p>必要なデータ（背景画像、音楽ファイル）を適切なフォルダに配置します。</p>
+    <ul>
+      <li>images/mirror_ball.png（背景画像はプロジェクトに収蔵）</li>
+      <li>sound/Dive_To_Mod.mp3（音楽ファイルはダウンロードして下さい。）</li>
+      <li><a href="https://dova-s.jp/bgm/play21452.html">Dive To Mod</a></li>
+      <li>フリーBGM素材「Dive To Mod」by MFP【Marron Fields Production】</li>
+    </ul>
+  </li>
+  <li>
+    <p>アプリを起動します。</p>
+    <pre><code class="bash">python main.py
+</code></pre>
+  </li>
+</ol>
+<h2>操作方法</h2>
+<ul>
+  <li>
+    <p>カメラ操作</p>
+    <ul>
+      <li>W / S / A / Dキー: カメラの前後左右移動</li>
+      <li>Q / Eキー: 上下移動</li>
+      <li>マウス: カメラの視点を回転</li>
+    </ul>
+  </li>
+  <li>
+    <p>アプリの操作</p>
+    <ul>
+      <li>Spaceキー: 音楽再生＆エコライザー起動</li>
+      <li>Zキー: 波の進行方向を切り替え</li>
+      <li>Escapeキー: アプリ終了</li>
+    </ul>
+  </li>
+</ul>
+<h2>プロジェクト構成</h2>
+<pre><code class="plaintext">plateau-urban-equalizer/
 ├── 14/                      # PLATEAUプロジェクトの都市データ
 ├── 15/                      # PLATEAUプロジェクトの都市データ
 ├── 16/                      # PLATEAUプロジェクトの都市データ
@@ -234,6 +233,7 @@ cd plateau-urban-equalizer
 │   ├── data_loader.py       # データの読み込み
 │   ├── equalizer.py         # サウンドエコライザー機能
 │   ├── sound.py             # 音楽解析と再生
+│   ├── piano.py             # ピアノ機能（第6章　応用事例）
 ├── images/
 │   └── mirror_ball.png      # 背景画像
 ├── sound/
@@ -242,72 +242,90 @@ cd plateau-urban-equalizer
 ├── building_app_example.py  # ビルの描画（第3章）
 ├── main_part4.py            # アプリのエントリーポイント（第4章）
 ├── main.py                  # アプリのエントリーポイント（完成）
+├── main_piano.py            # PLATEAU Piano（第6章　応用事例）
 ├── README.md                # 本ファイル
 ├── LICENSE                  # ライセンス
 </code></pre>
-    <h2>使い方のポイント</h2>
+<h2>使い方のポイント</h2>
+<ul>
+  <li>
+    <p><strong>カスタマイズ</strong><br />
+    main.py内のタイル座標を変更することで、異なる都市エリアを表示できます。ズームレベルに対応するタイル座標の調べ方は、<a href="https://note.com/creativival/n/nf040a73a152a#8f5f5aa9-bf06-493e-9ffd-0345d1dce662">noteの解説記事の付録</a>を参照してください。</p>
+  </li>
+  <li>
+    <p><strong>波形のパラメータ調整</strong><br />
+    equalizer.py内のwave_lengthやwave_speedを変更することで、波形の挙動をカスタマイズ可能です。</p>
+  </li>
+  <li>
+    <p><strong>初心者サポート</strong><br />
+    各クラスや関数に詳細なコメントが付いており、プログラムの仕組みを学ぶ教材としても活用できます。特に、建築科の学生など、都市データを活用したプロジェクトに興味を持つ方におすすめです。</p>
+  </li>
+</ul>
+<h2>トラブルシューティング</h2>
+<p>各種トラブルシューティングをまとめます。</p>
+<h3>サウンド関係</h3>
+<p>音楽が再生できない原因として、次のようなものがあります。</p>
+<ul>
+  <li>
+    <p><strong>サウンドパスが正しくない</strong><br />
+    サウンドパスを修正</p>
+  </li>
+  <li>
+    <p><strong>MP３ファイルが壊れている</strong><br />
+    別のMP3ファイルに入れ替える</p>
+  </li>
+  <li>
+    <p><strong>ffmpegがインストールされていない</strong></p>
     <ul>
-        <li>
-            <p><strong>カスタマイズ</strong><br/>
-                main.py内のタイル座標を変更することで、異なる都市エリアを表示できます。ズームレベルに対応するタイル座標の調べ方は、<a
-                        href="https://note.com/creativival/n/nf040a73a152a#8f5f5aa9-bf06-493e-9ffd-0345d1dce662">noteの解説記事の付録</a>を参照してください。
-            </p>
-        </li>
-        <li>
-            <p><strong>波形のパラメータ調整</strong><br/>
-                equalizer.py内のwave_lengthやwave_speedを変更することで、波形の挙動をカスタマイズ可能です。</p>
-        </li>
-        <li>
-            <p><strong>初心者サポート</strong><br/>
-                各クラスや関数に詳細なコメントが付いており、プログラムの仕組みを学ぶ教材としても活用できます。特に、建築科の学生など、都市データを活用したプロジェクトに興味を持つ方におすすめです。</p>
-        </li>
+      <li>以下のコマンドでインストール可能です。</li>
+      <li>macOS: brew install ffmpeg</li>
+      <li>Ubuntu: sudo apt install ffmpeg</li>
+      <li>Windows: 公式サイトからダウンロードしてPATHを設定。</li>
     </ul>
-    <h2>トラブルシューティング</h2>
-    <p>各種トラブルシューティングをまとめます。</p>
-    <h3>サウンド関係</h3>
-    <p>音楽が再生できない原因として、次のようなものがあります。</p>
-    <ul>
-        <li>
-            <p><strong>サウンドパスが正しくない</strong><br/>
-                サウンドパスを修正</p>
-        </li>
-        <li>
-            <p><strong>MP３ファイルが壊れている</strong><br/>
-                別のMP3ファイルに入れ替える</p>
-        </li>
-        <li>
-            <p><strong>ffmpegがインストールされていない</strong></p>
-            <ul>
-                <li>以下のコマンドでインストール可能です。</li>
-                <li>macOS: brew install ffmpeg</li>
-                <li>Ubuntu: sudo apt install ffmpeg</li>
-                <li>Windows: 公式サイトからダウンロードしてPATHを設定。</li>
-            </ul>
-        </li>
-    </ul>
-    <h3>画像関係</h3>
-    <p>画像が表示できない原因として、次のようなものがあります。</p>
-    <ul>
-        <li>
-            <p><strong>画像パスが正しくない</strong><br/>
-                画像パスを修正</p>
-        </li>
-        <li>
-            <p><strong>画像ファイルが壊れている</strong><br/>
-                別の画像ファイルに入れ替える</p>
-        </li>
-    </ul>
-    <h2>ライセンス</h2>
-    <p>このプロジェクトはMITライセンスの下で公開されています。詳細は<a href="LICENSE">LICENSEファイル</a>をご確認ください。</p>
-    <h2>貢献</h2>
-    <ul>
-        <li>このアプリを通じてPLATEAUプロジェクトに興味を持ち、都市データを活用したプロジェクトに挑戦していただければ幸いです。</li>
-        <li>フィードバックや提案はぜひお寄せください。</li>
-    </ul>
+  </li>
+</ul>
+<h3>画像関係</h3>
+<p>画像が表示できない原因として、次のようなものがあります。</p>
+<ul>
+  <li>
+    <p><strong>画像パスが正しくない</strong><br />
+    画像パスを修正</p>
+  </li>
+  <li>
+    <p><strong>画像ファイルが壊れている</strong><br />
+    別の画像ファイルに入れ替える</p>
+  </li>
+</ul>
+<h3>応用事例</h3>
+<p class="text-center"><img src="https://creativival.github.io/plateau-urban-equalizer/images/piano.png" alt="piano" /></p>
+<p>本アプリケーションの柔軟性を示すため、応用事例として PLATEAU Piano を作成しました。PLATEAU Piano は、3D都市をピアノの鍵盤に見立て、音楽を演奏できるアプリケーションです。</p>
+<p>詳しい作成手順やコードの詳細は、以下のリンクからご覧いただけます。この事例を参考に、ぜひ自分だけのオリジナルアプリケーションを作り上げてください！</p>
+<ul>
+  <li><a href="https://note.com/creativival/n/nf040a73a152a#83633652-8e44-4aab-8aaf-7e7b5f3db92a">PLATEAU Piano</a></li>
+</ul>
+<h2>ライセンス</h2>
+<p>このプロジェクトはMITライセンスの下で公開されています。詳細は<a href="LICENSE">LICENSEファイル</a>をご確認ください。</p>
+<h2>貢献</h2>
+<ul>
+  <li>このアプリを通じてPLATEAUプロジェクトに興味を持ち、都市データを活用したプロジェクトに挑戦していただければ幸いです。</li>
+  <li>フィードバックや提案はぜひお寄せください。</li>
+</ul>
 
 
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
 
