--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ self.camera.lookAt(0, 0, 0)  # 注視点を都市の中心に設定
 <p>ぜひこれらの設定を変更し、自分だけのオリジナル3D都市アプリケーションを作成してください！</p>
 <h2>デモ画像</h2>
 <p>以下は、アプリの実行中の画面です。</p>
-<p class="text-center"><img src="https://creativival.github.io/plateau-urban-equalizer/images/demo1.png" alt="デモ画像1" />
+<p class="text-center"g><img src="https://creativival.github.io/plateau-urban-equalizer/images/demo1.png" alt="デモ画像1" />
 <img src="https://creativival.github.io/plateau-urban-equalizer/images/demo2.png" alt="デモ画像2" /></p>
 <h2>必要な環境</h2>
 <ul>
@@ -297,11 +297,23 @@ cd plateau-urban-equalizer
   </li>
 </ul>
 <h3>応用事例</h3>
-<p class="text-center"><img src="https://creativival.github.io/plateau-urban-equalizer/images/piano.png" alt="piano" /></p>
+<p class="text-center"><img src="https://creativival.github.io/plateau-urban-equalizer/images/piano.png" alt="PLATEAU Piano" /></p>
 <p>本アプリケーションの柔軟性を示すため、応用事例として PLATEAU Piano を作成しました。PLATEAU Piano は、3D都市をピアノの鍵盤に見立て、音楽を演奏できるアプリケーションです。</p>
 <p>詳しい作成手順やコードの詳細は、以下のリンクからご覧いただけます。この事例を参考に、ぜひ自分だけのオリジナルアプリケーションを作り上げてください！</p>
 <ul>
   <li><a href="https://note.com/creativival/n/nf040a73a152a#83633652-8e44-4aab-8aaf-7e7b5f3db92a">PLATEAU Piano</a></li>
+</ul>
+<h3>他のプラットフォームへの移植</h3>
+<p class="text-center"><img src="https://creativival.github.io/plateau-urban-equalizer/images/visionOS_app.png" alt="PLATEAU Urban Equalizer Voyage" /></p>
+<p>本アプリケーションをベースに、iPhone / iPad / Vision Pro向けのアプリケーションを開発しました。PLATEAU Urban Equalizerは、3D都市データを活用し、音楽に連動したサウンドエコライザー効果をビジュアル化するアプリケーションです。視覚と聴覚を融合した新しい都市体験を提供します。</p>
+<ul>
+  <li>
+    <p><a href="https://apps.apple.com/us/app/plateau-urban-equalizer/id6739744416">iOS: PLATEAU Urban Equalizer</a></p>
+  </li>
+  <li>
+    <p><a href="https://apps.apple.com/us/app/plateau-urban-equalizer-voyage/id6740018877">visionOS: PLATEAU Urban Equalizer Voyage</a></p>
+  </li>
+  <li></li>
 </ul>
 <h2>ライセンス</h2>
 <p>このプロジェクトはMITライセンスの下で公開されています。詳細は<a href="LICENSE">LICENSEファイル</a>をご確認ください。</p>
@@ -310,6 +322,8 @@ cd plateau-urban-equalizer
   <li>このアプリを通じてPLATEAUプロジェクトに興味を持ち、都市データを活用したプロジェクトに挑戦していただければ幸いです。</li>
   <li>フィードバックや提案はぜひお寄せください。</li>
 </ul>
+
+
 
 
 
