App Storeサポートページの更新

--- a/app_store_support.html
+++ b/app_store_support.html
@@ -36,6 +36,7 @@
 
 
 <h1 class="text-center mb-4">PLATEAU Urban Equalizer</h1>
+<p class="text-center"><img src="https://creativival.github.io/plateau-urban-equalizer/images/app_store_support_page_en.png" alt="thumbnail" /></p>
 <h2>Title</h2>
 <p>PLATEAU Urban Equalizer - Experience Tokyo's City in 3D<br />
 PLATEAU Urban Equalizer Voyage - Experience Tokyo's City in 3D</p>
@@ -148,6 +149,11 @@ PLATEAU Urban Equalizer Voyage - Experience Tokyo's City in 3D</p>
     </ul>
   </li>
 </ul>
+<h2>Contact</h2>
+<p>If you have any questions about how to use the app, report bugs, or request additional features, please contact us using the form below. A representative will try to reply to you within 5 business days.</p>
+<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfaUYRqJZigfFEeF86jrzS-PTj5V4wHFT9xCjU0Hnf423fXxw/viewform?usp=dialog">Contact Form</a></p>
+
+
 
 
 
