--- a/app_store_support.ja.html
+++ b/app_store_support.ja.html
@@ -34,8 +34,8 @@
 
 
 
-
 <h1 class="text-center mb-4">PLATEAU Urban Equalizer</h1>
+<p class="text-center"><img src="https://creativival.github.io/plateau-urban-equalizer/images/app_store_support_page_ja.png" alt="thumbnail" /></p>
 <h2>タイトル</h2>
 <p>PLATEAU Urban Equalizer - 東京の街を3Dで体験</p>
 <h2>サブタイトル</h2>
@@ -147,6 +147,12 @@
     </ul>
   </li>
 </ul>
+<h2>お問い合わせ</h2>
+<p>アプリの使い方、バグの報告、機能追加の要望などございましたら、以下のフォームよりご連絡ください。担当者より、5営業日以内に返信するようにいたします。</p>
+<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSeuUKvHZod174K2nJQi7zQAx_rbLugLfE_sd6i1UVuAHnHq2A/viewform?usp=dialog">お問い合わせフォーム</a></p>
+
+
+
 
 
 
